[package]
name = "mosaic-core"
version = "0.1.0"
description = "Mosaic protocol core library"
authors = [ "Steve Farroll <stevefarroll@proton.me>" ]
license = "MIT"
edition = "2021"

[features]
default = []
json = [ "serde", "serde_json" ]

[dependencies]
bitflags = "2.9"
blake3 = "1.7"
constant_time_eq = "0.4"
digest = "0.10"
ed25519-dalek = { version = "2.1", features = [ "rand_core", "digest" ] }
futures = "0.3"
http = "1.3"
mainline = { version = "5.3", features = [ "async" ] }
rand = "0.9"
rand_core = "0.6"
scrypt = "0.11"
secp256k1 = { version = "0.31", features = [ "global-context", "rand" ] }
serde = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
z32 = "1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen", "inaccurate"] }
getrandom = { version = "0.2", features = [ "js" ] }

[dev-dependencies]
base64 = "0.22"
tokio = { version = "1", features = [ "full" ] }

# Force scrypt to build with release-like speed even in dev mode
[profile.dev.package.scrypt]
opt-level = 3
debug-assertions = false
overflow-checks = false
